--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -1,3 +1,5 @@
+@import '../../../cryptoprint/sections/index/config';
+
 .header {
   position: absolute;
   top: 20px;
@@ -5,8 +7,16 @@
   right: 0;
   z-index: 101;
   .app-header {
+    text-align: center;
     .brand {
       margin: 0;
+      position: absolute;
+      left: 60px;
+      top: 0;
+      .logo {
+        display: block;
+        width: 176px;
+      }
       .menu {
         display: none;
       }
@@ -20,14 +30,21 @@
           width: 44px;
           height: 44px;
           path {
-            fill: rgba(255,255,255,0.987);
+            fill: rgba(255, 255, 255, 0.987);
           }
         }
       }
     }
+    .content {
+      max-width: 750px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
     .nav-btn {
-      margin: 0 50px 10px 0;
       text-transform: none;
+      font: 500 14px/32px $main-font;
+      padding: 0 5px;
+      min-width: auto;
       &:last-child {
         margin-right: 0;
       }
@@ -49,6 +66,7 @@
           width: 100%;
         }
       }
+    }
     }
     .md-btn {
       color: rgba(#fff, 0.987);
