--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -23,7 +23,7 @@ h2 {
 .index-section {
 	section {
 		width: 100%;
-		padding: 140px 0;
+		padding: 200px 0 0;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
