--- a/src/modules/cryptoprint/sections/index/index.scss
+++ b/src/modules/cryptoprint/sections/index/index.scss
@@ -27,6 +27,9 @@ h2 {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		@media (max-width: 640px) {
+			padding-top: 100px;
+		}
 	}
 	@import './parts/hero.scss';
 	@import './parts/attributes.scss';
