--- a/src/modules/cryptoprint/sections/index/parts/community.scss
+++ b/src/modules/cryptoprint/sections/index/parts/community.scss
@@ -42,11 +42,11 @@
       &:first-child {
         margin-left: 0;
       }
-      @include tablet {
-        width: 40px;
-        height: 40px;
-        flex: 0 0 40px;
-      }
+      //@include tablet {
+      //  width: 40px;
+      //  height: 40px;
+      //  flex: 0 0 40px;
+      //}
       a {
         display: block;
         line-height: 1;
