--- a/src/modules/cryptoprint/sections/index/parts/newsletter.scss
+++ b/src/modules/cryptoprint/sections/index/parts/newsletter.scss
@@ -1,6 +1,9 @@
   @import '../config';
 
 .newsletter {
+  @include mobile {
+    padding: 0 10px;
+  }
   p {
     font: 18px/32px 'freight_medium';
     margin: 0;
@@ -10,6 +13,10 @@
     padding: 0 30px 30px;
     justify-content: space-between;
     align-items: center;
+    @include tablet {
+      flex-direction: column;
+      width: 100%;
+    }
     hr {
       display: none;
     }
@@ -29,6 +36,12 @@
       padding: 0 10px 0 28px;
       margin-top: 20px;
       width: 480px;
+      @include tablet {
+        width: 80%;
+      }
+      @include mobile {
+        width: 100%;
+      }
     }
     .sub-btn {
       background: $blue-gradient;
@@ -37,6 +50,9 @@
       &:hover {
         background: #fff;
         color: $main-color;
+      }
+      @include mobile {
+        margin-left: 0;
       }
     }
 
