--- a/src/modules/cryptoprint/sections/index/parts/preorder.scss
+++ b/src/modules/cryptoprint/sections/index/parts/preorder.scss
@@ -7,6 +7,9 @@
     color: #fff;
     margin-top: 200px;
     padding: 102px 0 133px;
+    @include mobile {
+      margin-top: 100px;
+    }
     p {
       color: #fff;
     }
@@ -41,6 +44,10 @@
   width: 473px;
   text-align: center;
   margin-top: 103px;
+  @include mobile {
+    width: 100%;
+    padding: 0 10px;
+  }
   hr {
     display: none;
   }
