--- a/src/modules/cryptoprint/sections/index/parts/team.scss
+++ b/src/modules/cryptoprint/sections/index/parts/team.scss
@@ -61,8 +61,7 @@
         margin-bottom: 0;
       }
       p {
-        font-size: 18px;
-        line-height: 28px;
+        font: 18px/28px 'freight_medium';
       }
     }
   }
