--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -124,15 +124,63 @@ body {
     border-color: #fff;
   }
 }
+
 .circle-btn {
+  background-color: transparent;
   border: 2px solid #fff;
-  border-radius: 100px;
+  color: #ffffff;
   text-transform: uppercase;
-  color: #fff;
-  min-width: 220px;
+  width: 220px;
   font: 16px/33px 'freight_bold';
+  border-radius: 100px;
   height: 50px;
-  transition: .2s;
+
+    &:before,
+    &:after {
+      content: '';
+      border-style: solid;
+      border-color: #fff;
+      position: absolute;
+      z-index: 5;
+      border-radius: 100px;
+      box-sizing: content-box;
+      transition: all 0.3s;
+    }
+
+    &:before {
+      width: 0;
+      height: 100%;
+      border-width: 2px 0 2px 0;
+      top: -2px;
+      right: 0;
+      transition-delay: 0.05s;
+    }
+
+    &:after {
+      width: 100%;
+      height: 0;
+      border-width: 0 2px 0 2px;
+      bottom: 0;
+      left: -2px;
+    }
+
+    &:hover {
+      color: #fff;
+      &:before {
+        width: 100%;
+      }
+
+      &:after {
+        height: 100%;
+      }
+    }
+
+  }
+@media screen and (min-width: 1025px) {
+  .md-btn--text::before, .md-btn--text::after {
+    display: block;
+    visibility: visible;
+  }
 }
 
 .img-wrap {
