--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -59,6 +59,7 @@
       font: 500 14px/32px $main-font;
       padding: 0 5px;
       min-width: auto;
+      font-variant: small-caps;
       &:last-child {
         margin-right: 0;
       }
