--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -12,7 +12,7 @@
       display: flex;
     }
     @include mobile {
-      flex-direction: column;
+      padding: 0 10px;
     }
     .brand {
       margin: 0;
@@ -25,6 +25,19 @@
       .logo {
         display: block;
         width: 176px;
+        @include mobile {
+          display: none;
+        }
+      }
+      .logo-mobile {
+        display: none;
+        @include mobile {
+          display: block;
+          width: 50px;
+          svg * {
+            fill: #fff;
+          }
+        }
       }
       .menu {
         display: none;
@@ -53,6 +66,9 @@
         margin-right: 10px;
         margin-left: auto;
         max-width: 300px;
+      }
+      @include mobile {
+        margin-right: auto;
       }
     .nav-btn {
       text-transform: none;
