--- a/src/modules/cryptoprint/sections/index/parts/attributes.scss
+++ b/src/modules/cryptoprint/sections/index/parts/attributes.scss
@@ -27,6 +27,9 @@
           @include tablet {
             padding: 0 10px;
           }
+          @include mobile {
+            padding: 0;
+          }
           h3 {
             font: 300 32px/36px $main-font;
             margin-bottom: 3rem;
@@ -42,6 +45,7 @@
             }
             @include mobile {
               font-size: 20px;
+              text-align: left;
             }
           }
         }
