--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -12,7 +12,11 @@
       display: flex;
     }
     @include mobile {
-      padding: 0 10px;
+      padding: 10px 10px 0 5px;
+      position: fixed;
+      background: $blue-gradient;
+      width: 100%;
+      top: 0;
     }
     .brand {
       margin: 0;
@@ -33,7 +37,7 @@
         display: none;
         @include mobile {
           display: block;
-          width: 50px;
+          width: 45px;
           svg * {
             fill: #fff;
           }
