--- a/src/modules/cryptoprint/sections/index/parts/attributes.scss
+++ b/src/modules/cryptoprint/sections/index/parts/attributes.scss
@@ -28,24 +28,21 @@
             padding: 0 10px;
           }
           @include mobile {
-            padding: 0;
+            padding: 0 20px;
           }
           h3 {
             font: 300 32px/36px $main-font;
             margin-bottom: 3rem;
             @include tablet {
-              margin-bottom: 5px;
+              margin-bottom: 20px;
             }
           }
           p {
             font: 18px/28px 'freight_light';
             margin-bottom: 2rem;
-            @include tablet {
-              margin-bottom: 0;
-            }
             @include mobile {
               font-size: 20px;
-              text-align: left;
+              text-align: center;
             }
           }
         }
