--- a/src/modules/cryptoprint/sections/index/parts/community.scss
+++ b/src/modules/cryptoprint/sections/index/parts/community.scss
@@ -8,6 +8,9 @@
   }
   .community {
     padding-top: 66px;
+    @include mobile {
+      padding-top: 0;
+    }
     .title {
       margin-bottom: 70px;
     }
@@ -18,6 +21,7 @@
       p {
         font-size: 18px;
         max-width: 280px;
+        text-align: center;
       }
     }
   }
@@ -27,6 +31,9 @@
     margin: 30px 0 20px;
     @include tablet {
       margin-top: 10px;
+    }
+    @include mobile {
+      justify-content: center;
     }
     li {
       list-style-type: none;
