--- a/src/modules/cryptoprint/sections/index/parts/hero.scss
+++ b/src/modules/cryptoprint/sections/index/parts/hero.scss
@@ -10,12 +10,16 @@
   background-image: $blue-gradient;
   text-align: center;
   font-family: $main-font;
+  @include mobile {
+    padding: 10vh 0 0;
+    height: 100vh;
+  }
   .hero-container {
     margin: 0 auto;
     max-width: 640px;
     color: #fff;
     @include mobile {
-      padding: 0 5px;
+      padding: 0;
     }
     svg {
       width: 300px;
@@ -48,6 +52,9 @@
       color: #fff;
       font: 20px/23px 'freight_light';
       margin-bottom: 97px;
+      @include mobile {
+        margin-bottom: 2vh;
+      }
     }
     .circle-btn {
       background: #fff;
