--- a/src/modules/cryptoprint/sections/index/parts/community.scss
+++ b/src/modules/cryptoprint/sections/index/parts/community.scss
@@ -29,6 +29,7 @@
     display: flex;
     padding: 0;
     margin: 30px 0 20px;
+    justify-content: center;
     @include tablet {
       margin-top: 10px;
     }
