--- a/src/modules/cryptoprint/sections/index/parts/attributes.scss
+++ b/src/modules/cryptoprint/sections/index/parts/attributes.scss
@@ -1,5 +1,8 @@
   @import '../config';
 .attributes {
+  @include tablet {
+    padding: 50px 12px 0;
+  }
   ul {
     margin-top: 120px;
     padding: 0;
@@ -24,12 +27,6 @@
         .text-block {
           max-width: 380px;
           margin: 0 auto;
-          @include tablet {
-            padding: 0 10px;
-          }
-          @include mobile {
-            padding: 0 20px;
-          }
           h3 {
             font: 300 32px/36px $main-font;
             margin-bottom: 3rem;
