--- a/src/modules/cryptoprint/sections/index/parts/hero.scss
+++ b/src/modules/cryptoprint/sections/index/parts/hero.scss
@@ -56,14 +56,14 @@
         margin-bottom: 2vh;
       }
     }
-    .circle-btn {
-      background: #fff;
-      color: $main-color;
-      &:hover {
-        background: $blue-gradient;
-        color: #fff;
-      }
-    }
+    //.circle-btn {
+    //  background: #fff;
+    //  color: $main-color;
+    //  &:hover {
+    //    background: $blue-gradient;
+    //    color: #fff;
+    //  }
+    //}
   }
 }
 
