--- a/src/modules/cryptoprint/sections/index/parts/newsletter.scss
+++ b/src/modules/cryptoprint/sections/index/parts/newsletter.scss
@@ -55,6 +55,20 @@
         background: #fff;
         color: $main-color;
       }
+      &.circle-btn {
+        color: #fff;
+        border: 2px solid #fff;
+        &:before,
+        &:after {
+          background: $blue-gradient;
+        }
+        &:hover {
+          &:before,
+          &:after {
+            background: #fff;
+          }
+        }
+      }
       @include mobile {
         margin-left: 0;
       }
