--- a/src/modules/cryptoprint/sections/index/parts/preorder.scss
+++ b/src/modules/cryptoprint/sections/index/parts/preorder.scss
@@ -75,6 +75,20 @@
   button {
     margin-top: 40px;
     margin-bottom: 10px;
+    &.circle-btn {
+      color: #fff;
+      border: 2px solid #fff;
+      &:before,
+      &:after {
+        background: transparent;
+      }
+      &:hover {
+        color: #314cc6;
+        span:before {
+          background: #fff;
+        }
+      }
+    }
   }
   p {
     font-size: 14px;
