--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -56,7 +56,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #1565c0;
+  background: $blue-gradient;
   display: flex;
   justify-content: center;
   align-items: center;
