--- a/src/modules/app/components/header/header.scss
+++ b/src/modules/app/components/header/header.scss
@@ -77,10 +77,27 @@
       padding: 0 5px;
       min-width: auto;
       letter-spacing: .03em;
+      color: #fff;
+      cursor: pointer;
+      position: relative;
       &:last-child {
         margin-right: 0;
       }
-      div:after {
+      &.active-item {
+        font-weight: bold;
+        &:after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          background: #fff;
+          transition: width .3s;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+        }
+      }
+      &:after {
         content: '';
         display: block;
         width: 0;
