--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -49,7 +49,9 @@ body {
 .flex-container {
   display: flex;
 }
-
+.md-text-field-message {
+  color: #fff;
+}
 .preloader-wrap {
   position: fixed;
   top: 0;
