--- a/src/modules/cryptoprint/sections/index/parts/newsletter.scss
+++ b/src/modules/cryptoprint/sections/index/parts/newsletter.scss
@@ -73,7 +73,10 @@
         margin-left: 0;
       }
     }
-
+    .md-text-field-message {
+      color: $main-color;
+      margin-left: 30px;
+    }
   }
   @media only screen and (max-width: $breakpoint) {
 
