--- a/src/modules/cryptoprint/sections/index/parts/team.scss
+++ b/src/modules/cryptoprint/sections/index/parts/team.scss
@@ -24,7 +24,7 @@
       width: 30%;
       padding: 122px 75px 4rem 35px;
       position: relative;
-      height: 404px;
+      min-height: 404px;
       text-align: left;
       list-style-type: none;
       margin: 0 10px 145px;
