--- a/src/modules/cryptoprint/sections/index/parts/community.scss
+++ b/src/modules/cryptoprint/sections/index/parts/community.scss
@@ -21,7 +21,9 @@
       p {
         font-size: 18px;
         max-width: 280px;
-        text-align: center;
+        @include mobile {
+          display: none;
+        }
       }
     }
   }
@@ -29,7 +31,6 @@
     display: flex;
     padding: 0;
     margin: 30px 0 20px;
-    justify-content: center;
     @include tablet {
       margin-top: 10px;
     }
