--- a/src/modules/cryptoprint/sections/index/parts/newsletter.scss
+++ b/src/modules/cryptoprint/sections/index/parts/newsletter.scss
@@ -1,12 +1,17 @@
   @import '../config';
 
 .newsletter {
+  padding-top: 0;
   @include mobile {
     padding: 0 10px;
   }
   p {
     font: 18px/32px 'freight_medium';
     margin: 0;
+    &.newsletter-header {
+      margin: 0;
+      font-size: 34px;
+    }
     @include mobile {
       text-align: center;
     }
@@ -30,6 +35,7 @@
       transform: translate3d(0, 21px, 0);
       &.md-floating-label--floating {
         transform: translate3d(0, -12px, 0);
+        color: #fff;
       }
     }
     input {
@@ -48,40 +54,40 @@
       }
     }
     .sub-btn {
-      background: $blue-gradient;
+      //  background: $blue-gradient;
       margin-left: 20px;
-      border: none;
-      &:hover {
-        background: #fff;
-        color: $main-color;
-      }
-      &.circle-btn {
-        color: #fff;
-        border: 2px solid #fff;
-        &:before,
-        &:after {
-          background: $blue-gradient;
-        }
-        &:hover {
-          &:before,
-          &:after {
-            background: #fff;
-          }
-        }
-      }
+      //  border: none;
+      //  &:hover {
+      //    background: #fff;
+      //    color: $main-color;
+      //  }
+      //&.circle-btn {
+      //  color: #fff;
+      //  border: 2px solid #fff;
+      //  &:before,
+      //  &:after {
+      //    background: $blue-gradient;
+      //  }
+      //  &:hover {
+      //    &:before,
+      //    &:after {
+      //      background: #fff;
+      //    }
+      //  }
+      //}
       @include mobile {
         margin-left: 0;
       }
+      // }
+      .md-text-field-message {
+        color: $main-color;
+        margin-left: 30px;
+      }
     }
-    .md-text-field-message {
-      color: $main-color;
-      margin-left: 30px;
-    }
-  }
-  @media only screen and (max-width: $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
 
       h3 {
-        white-space: normal!important;
+        white-space: normal !important;
         text-align: center;
       }
       .form-container {
@@ -93,5 +99,6 @@
 
         }
       }
+    }
   }
 }
