--- a/src/modules/cryptoprint/sections/index/parts/hero.scss
+++ b/src/modules/cryptoprint/sections/index/parts/hero.scss
@@ -2,7 +2,7 @@
 
 .hero-content {
   padding: 120px 0;
-  height: 85vh;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +32,7 @@
 
     h1, h3, .btn {
       z-index: 10;
-      // color: #fff;
+      color: #fff;
       white-space: normal;
     }
     .action {
