revert full page

--- a/src/modules/cryptoprint/sections/index/parts/footer.scss
+++ b/src/modules/cryptoprint/sections/index/parts/footer.scss
@@ -1,28 +1,27 @@
-  @import '../config';
+@import '../config';
 
 .footer {
+  margin-top: 200px;
   background: $dark-grey;
   color: #fff;
   @include tablet {
     margin-top: 100px;
-    height: auto;
   }
   @include mobile {
-    margin-top: 0;
+    margin-top: 50px;
   }
   svg {
     width: 176px;
   }
   .footer-top {
+    border-bottom: 1px solid #fff;
     .flex-container {
-      height: 10vh;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
-      padding: 0 100px 0;
+      padding: 90px 100px 70px;
       @include tablet {
         padding: 20px 12px;
         align-items: center;
-        height: auto;
       }
       >* {
         @include tablet {
@@ -45,21 +44,12 @@
         border: 2px solid #fff;
       }
       .contact {
-        display: flex;
-        align-items: center;
-        @include tablet {
-          flex-direction: column;
-        }
         a {
           font-size: 18px;
           margin-top: 5px;
         }
         .social-links {
           margin-top: 23px;
-          margin-left: 20px;
-          @include tablet {
-            margin-left: 0;
-          }
           li {
             width: 40px;
             height: 40px;
@@ -83,7 +73,7 @@
     .flex-container {
       align-items: center;
       justify-content: space-between;
-      height: 5vh;
+      height: 66px;
       @include tablet {
         justify-content: center;
         height: auto;
