--- a/src/modules/cryptoprint/sections/index/parts/hero.scss
+++ b/src/modules/cryptoprint/sections/index/parts/hero.scss
@@ -2,7 +2,7 @@
 
 .hero-content {
   padding: 120px 0;
-  height: 90vh;
+  height: 750px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,6 +16,7 @@
   }
   .hero-container {
     margin: 0 auto;
+    max-width: 640px;
     color: #fff;
     @include tablet {
       padding: 0 12px;
@@ -32,7 +33,7 @@
 
     h1, h3, .btn {
       z-index: 10;
-      color: #fff;
+      // color: #fff;
       white-space: normal;
     }
     .action {
@@ -42,17 +43,15 @@
       font: 500 50px/55px $main-font;
       color: #fff;
       margin-top: 76px;
-      margin-bottom: 70px;
+      margin-bottom: 24px;
       @include mobile {
         font-size: 48px;
-        margin-top: 0;
       }
     }
     p {
       color: #fff;
       font: 20px/23px 'freight_light';
       margin-bottom: 97px;
-      margin-top: 30px;
       @include mobile {
         margin-bottom: 2vh;
       }
