--- a/src/modules/cryptoprint/sections/index/parts/team.scss
+++ b/src/modules/cryptoprint/sections/index/parts/team.scss
@@ -25,7 +25,7 @@
       padding: 122px 75px 4rem 35px;
       position: relative;
       min-height: 404px;
-      text-align: left;
+      text-align: center;
       list-style-type: none;
       margin: 0 10px 145px;
       @include tablet {
@@ -63,7 +63,7 @@
       }
       h3 {
         font: 16px/32px 'freight_bold';
-        text-align: left;
+        text-align: center;
         margin-bottom: 0;
         @include mobile {
           text-align: center;
